# wipro_ubs_coding_task

./: .gitignore  README.md  main.py  pyproject.toml
config/: config.ini
db/: database_handler.py
tests/: test_main.py
