[tool.poetry]
name = "wipro-ubs-coding-task"
version = "0.1.0"
description = ""
authors = ["Mario Romera <mromera@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pyspark = "^3.5.0"
pytest = "^7.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
